--- a/source/test.html
+++ b/source/test.html
@@ -4,10 +4,10 @@
    </head>
    <body>
       <h1></h1>
-      <p style="text-align:center;font-weight:bold;">Your authentication succeeded</p>
+      <p style="text-align:center;font-weight:bold;vertical-align: middle;">Your authentication succeeded</p>
    </body>
    <?xml version="1.0" encoding="UTF-8"?>
-   <svg width="265px" height="56px" viewBox="0 0 265 56" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+   <svg width="265px" height="56px" viewBox="0 0 265 56" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" onclick="window.location.href='https://belgianmobileid.github.io/slate/confirm.html'>
     <g id="buttons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="itsme_buttons_guidelines-copy" transform="translate(-340.000000, -419.000000)">
             <g id="btn_signup_tangerine" transform="translate(340.000000, 419.000000)">
