--- a/source/test.html
+++ b/source/test.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
    <head>
+     <style>
+      .flex-container {
+      display: flex;
+      justify-content: center;
+      background-color: DodgerBlue;
+      }
+      .flex-container > div {
+      background-color: #f1f1f1;
+      width: 100px;
+      margin: 10px;
+      text-align: center;
+      line-height: 75px;
+      font-size: 30px;
+      }
+      </style>
    </head>
    <body>
-      <h1></h1>
-      <p style="text-align:center;font-weight:bold;vertical-align: middle;">Your authentication succeeded</p>
+     <div class="flex-container">
+     <p>Your authentication succeeded</p>
+       <div/>
    </body>
    <?xml version="1.0" encoding="UTF-8"?>
    <svg width="265px" height="56px" viewBox="0 0 265 56" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" onclick="window.location.href='https://belgianmobileid.github.io/slate/confirm.html'>
