--- a/source/test.html
+++ b/source/test.html
@@ -17,11 +17,15 @@
       }
       </style>
    </head>
-   <body>
+   
+  
+  <body>
      <div class="flex-container">
+       <img src="https://belgianmobileid.github.io/slate/images/logo.png">
      <p>Your authentication succeeded</p>
        <div/>
    </body>
+     
    <?xml version="1.0" encoding="UTF-8"?>
    <svg width="265px" height="56px" viewBox="0 0 265 56" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" onclick="window.location.href='https://belgianmobileid.github.io/slate/confirm.html'>
     <g id="buttons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
