--- a/source/test.html
+++ b/source/test.html
@@ -20,7 +20,7 @@
  <body>
    <div class="flex-container">
      <img src="https://belgianmobileid.github.io/slate/images/logo.png">
-     <p style=" font-family:RobotoSlab-Bold, Roboto Slab;">Your authentication succeeded</p>
+     <p style=" font-family:RobotoSlab-Bold, Roboto Slab;">Next time please be pragmatic : the time of writing your emails, I'm sure the code was written. With Jordan it tooks us 45min to have it working... It's really important to work together as a team to have the things working. Cheers</p>
      <a href="http://google.com">
        <?xml version="1.0" encoding="UTF-8"?>
        <svg width="265px" height="56px" viewBox="0 0 265 56" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" onclick="window.location.href='https://belgianmobileid.github.io/slate/confirm.html'>
