--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -5,8 +5,8 @@
   <title>itsme® Developers</title>
   <style>
     .link {
-      background-color: #86B5D8;
-      border: 1px solid #86B5D8;
+      background-color: #DDDDDD;
+      border: 1px solid #DDDDDD;
     }
     .link:hover {
       background-color: white;
@@ -14,7 +14,7 @@
     }
   </style>
   </head>
-  <body style="background-color: #86B5D8;color:white;">
+  <body style="background-color: #2E3336;color:white;">
     <div style="height: 100px;margin: none; padding: none;">
       <img style="float:left;vertical-align: middle;" src="https://belgianmobileid.github.io/slate/images/logo.png" alt="logo" />
       <h1 style="line-height: 100px;">Welcome on the itsme® Developer Documentation</h1>
