--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -5,8 +5,8 @@
   <title>itsme® Developers</title>
   <style>
     .link {
-      background-color: #DDDDDD;
-      border: 1px solid #DDDDDD;
+      background-color: #c9e6da;
+      border: 1px solid #c9e6da;
     }
     .link:hover {
       background-color: white;
@@ -14,7 +14,7 @@
     }
   </style>
   </head>
-  <body style="background-color: #2E3336;color:white;">
+  <body style="background-color: #c9e6da;color:white;">
     <div style="height: 100px;margin: none; padding: none;">
       <img style="float:left;vertical-align: middle;" src="https://belgianmobileid.github.io/slate/images/logo.png" alt="logo" />
       <h1 style="line-height: 100px;">Welcome on the itsme® Developer Documentation</h1>
@@ -24,19 +24,19 @@
       <tbody>
         <tr>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/sharedata.html'" >
-              <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
+              <div class="link" style="width:80%; margin: 5px;color:#c9e6da;padding: 20px;text-align:center;border-radius: 20px;">
                 Share Data Documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="Share.png" alt="share-logo" />
               </div>
             </td>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/login.html'" >
-              <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
+              <div class="link" style="width:80%; margin: 5px;color:#c9e6da;padding: 20px;text-align:center;border-radius: 20px;">
                 Login Documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="Login.png" alt="login-logo" />
               </div>
             </td>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/confirm.html'">
-              <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
+              <div class="link" style="width:80%; margin: 5px;color:#c9e6da;padding: 20px;text-align:center;border-radius: 20px;">
                 Confirm Documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="Confirm.png" alt="confirm-logo" />
               </div>
@@ -44,7 +44,7 @@
         </tr>
         <tr>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/qes.html'">
-              <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
+              <div class="link" style="width:80%; margin: 5px;color:#c9e6da;padding: 20px;text-align:center;border-radius: 20px;">
                 Qualified Electronic Signature Documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="Sign.png" alt="sign-logo" />
               </div>
