--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -6,7 +6,7 @@
   <style>
     .link {
       background-color: #c9e6da;
-      border: 1px solid #c9e6da;
+      border: 1px solid #DDDDDD;
     }
     .link:hover {
       background-color: white;
@@ -14,7 +14,7 @@
     }
   </style>
   </head>
-  <body style="background-color: #c9e6da;color:white;">
+  <body style="background-color: #2E3336;color:white;">
     <div style="height: 100px;margin: none; padding: none;">
       <img style="float:left;vertical-align: middle;" src="https://belgianmobileid.github.io/slate/images/logo.png" alt="logo" />
       <h1 style="line-height: 100px;">Welcome on the itsme® Developer Documentation</h1>
@@ -24,7 +24,7 @@
       <tbody>
         <tr>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/sharedata.html'" >
-              <div class="link" style="width:80%; margin: 5px;color:#c9e6da;padding: 20px;text-align:center;border-radius: 20px;">
+              <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Share Data Documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="Share.png" alt="share-logo" />
               </div>
