--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -5,7 +5,7 @@
   <title>itsme® Developers</title>
   <style>
     .link {
-      background-color: #c9e6da;
+      background-color: #DDDDDD;
       border: 1px solid #DDDDDD;
     }
     .link:hover {
@@ -30,13 +30,13 @@
               </div>
             </td>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/login.html'" >
-              <div class="link" style="width:80%; margin: 5px;color:#c9e6da;padding: 20px;text-align:center;border-radius: 20px;">
+              <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Login Documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="Login.png" alt="login-logo" />
               </div>
             </td>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/confirm.html'">
-              <div class="link" style="width:80%; margin: 5px;color:#c9e6da;padding: 20px;text-align:center;border-radius: 20px;">
+              <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Confirm Documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="Confirm.png" alt="confirm-logo" />
               </div>
@@ -44,7 +44,7 @@
         </tr>
         <tr>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/qes.html'">
-              <div class="link" style="width:80%; margin: 5px;color:#c9e6da;padding: 20px;text-align:center;border-radius: 20px;">
+              <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Qualified Electronic Signature Documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="Sign.png" alt="sign-logo" />
               </div>
