--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -5,8 +5,8 @@
   <title>itsme® Developers</title>
   <style>
     .link {
-      background-color: #f7f7f7;
-      border: 1px solid #DDDDDD;
+      background-color: #DDDDDD;
+      border: 1px solid #f7f7f7;
     }
     .link:hover {
       background-color: white;
