--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -38,7 +38,7 @@
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/confirm.html'">
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Confirm Documentation<br/>
-                <img style="width: 50px; height: 50px; margin-top:2em;" src="Confirm.png" alt="confirm-logo" />
+                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://github.com/belgianmobileid/slate/blob/master/source/Confirm.png" alt="confirm-logo" />
               </div>
             <td/>
         </tr>
