--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -16,8 +16,8 @@
   </head>
   <body style="background-color: #f7f7f7;color:black;">
     <div style="height: 100px;margin: none; padding: none;">
-      <img style="width: 100px; height: 100px;float:left;vertical-align: middle;" src="https://belgianmobileid.github.io/slate/images/Itsme_logo_hexa_pos_rgb.svg" alt="logo" />
-      <h1 style="line-height: 100px;float: left;margin: 5em auto;">Welcome on the itsme® Developer Documentation</h1>
+      <img style="width: 75px; height: 75px;float:left;vertical-align: middle;" src="https://belgianmobileid.github.io/slate/images/Itsme_logo_hexa_pos_rgb.svg" alt="logo" />
+      <h1 style="line-height: 100px;float: left;">Welcome on the itsme® Developer Documentation</h1>
     </div>
     <hr style="clear: both; border: none;"/>
     <table style="width:75%; margin: 5em auto;">
