--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -17,10 +17,10 @@
   <body style="background-color: #f7f7f7;color:black;">
     <div style="height: 100px;margin: none; padding: none;">
       <img style="width: 75px; height: 75px;float:left;vertical-align: middle;margin-top: 25px;margin-left: 25px;" src="https://belgianmobileid.github.io/slate/images/Itsme_logo_hexa_pos_rgb.svg" alt="logo" />
-      <h1 style="line-height: 100px;float: left;">Welcome on the itsme® Developer Documentation</h1>
+      <h1 style="line-height: 100px;float: left;margin-left: 100px;">Welcome on the itsme® Developer Documentation</h1>
     </div>
     <hr style="clear: both; border: none;"/>
-    <table style="width:75%; margin: 5em auto;">
+    <table style="width:75%; margin: 100px;">
       <tbody>
         <tr>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/sharedata.html'" >
