--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -20,7 +20,7 @@
       <h1 style="line-height: 100px;float: left;margin-left: 100px;">Welcome on the itsme® Developer Documentation</h1>
     </div>
     <hr style="clear: both; border: none;"/>
-    <table style="width:75%; margin: 100px;">
+    <table style="width:75%; margin: 5em auto;">
       <tbody>
         <tr>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/sharedata.html'" >
