--- a/source/index.html
+++ b/source/index.html
@@ -16,8 +16,8 @@
   </head>
   <body style="background-color: #2E3336;color:white;">
     <div style="height: 100px;margin: none; padding: none;">
-      <img style="float:left;vertical-align: middle;" src="https://belgianmobileid.github.io/slate/images/logo.png" alt="logo" />
-      <h1 style="line-height: 100px;">Welcome on the itsme® Developer Documentation</h1>
+      <img style="width: 75px; height: 75px;float:left;vertical-align: middle;margin-top: 25px;margin-left: 25px;" src="https://belgianmobileid.github.io/slate/images/Itsme_logo_hexa_pos_rgb.svg" alt="logo" />
+      <h1 style="line-height: 100px;float: left;margin-left: 100px;">Welcome on the itsme® Developer Documentation</h1>
     </div>
     <hr style="clear: both; border: none;"/>
     <table style="width:75%; margin: 5em auto;">
@@ -26,19 +26,19 @@
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/sharedata.html'" >
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Share Data Documentation<br/>
-                <img style="width: 50px; height: 50px; margin-top:2em;" src="Share.png" alt="share-logo" />
+                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/Share.png" alt="share-logo" />
               </div>
             </td>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/login.html'" >
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Login Documentation<br/>
-                <img style="width: 50px; height: 50px; margin-top:2em;" src="Login.png" alt="login-logo" />
+                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/Login.png" alt="login-logo" />
               </div>
             </td>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/confirm.html'">
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Confirm Documentation<br/>
-                <img style="width: 50px; height: 50px; margin-top:2em;" src="Confirm.png" alt="confirm-logo" />
+                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/Confirm.png" alt="confirm-logo" />
               </div>
             <td/>
         </tr>
@@ -46,7 +46,7 @@
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/qes.html'">
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Qualified Electronic Signature Documentation<br/>
-                <img style="width: 50px; height: 50px; margin-top:2em;" src="Sign.png" alt="sign-logo" />
+                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/Sign.png" alt="sign-logo" />
               </div>
             </td>
         </tr>
@@ -55,3 +55,5 @@
 
   </body>
 </html>
+
+
