--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <title>itsme® Developers</title>
   <style>
     .link {
-      background-color: #DDDDDD;
+      background-color: #ffffff;
       border: 1px solid #DDDDDD;
     }
     .link:hover {
