--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -26,13 +26,13 @@
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/sharedata.html'" >
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Identification Service documentation<br/>
-                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/Share.png" alt="share-logo" />
+                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/images/always_corrrect_id.png" alt="share-logo" />
               </div>
             </td>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/login.html'" >
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Authentication Service documentation<br/>
-                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/Login.png" alt="login-logo" />
+                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/images/online_account.png" alt="login-logo" />
               </div>
             </td>
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/confirm.html'">
@@ -46,7 +46,7 @@
             <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/qes.html'">
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Signing Service documentation<br/>
-                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/Sign.png" alt="sign-logo" />
+                <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/images/sign_documents.png" alt="sign-logo" />
               </div>
             </td>
         </tr>
