--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -23,19 +23,19 @@
     <table style="width:75%; margin: 5em auto;">
       <tbody>
         <tr>
-            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/sharedata.html'" >
+            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/identification.html'" >
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Identification Service documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/images/always_correct_id.png" alt="share-logo" />
               </div>
             </td>
-            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/login.html'" >
+            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/authentication.html'" >
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Authentication Service documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/images/online_account.png" alt="login-logo" />
               </div>
             </td>
-            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/confirm.html'">
+            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/v2/confirmation.html'">
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Confirmation Service documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/images/confirm_orders.png" alt="confirm-logo" />
@@ -43,7 +43,7 @@
             <td/>
         </tr>
         <tr>
-            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/qes.html'">
+            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/signing.html'">
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Signing Service documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/images/sign_documents.png" alt="sign-logo" />
