--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
     }
   </style>
   </head>
-  <body style="background-color: #d1ecf1;color:black;">
+  <body style="background-color: #2e3336;color:white;">
     <div style="height: 100px;margin: none; padding: none;">
       <img style="width: 75px; height: 75px;float:left;vertical-align: middle;margin-top: 25px;margin-left: 25px;" src="https://belgianmobileid.github.io/slate/images/Itsme_logo_hexa_pos_rgb.svg" alt="logo" />
       <h1 style="line-height: 100px;float: left;margin-left: 100px;">Welcome on the itsme® developer documentation</h1>
