--- a/source/v2/index.html
+++ b/source/v2/index.html
@@ -43,7 +43,7 @@
             <td/>
         </tr>
         <tr>
-            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/signing.html'">
+            <td style="width:33%;cursor: pointer;" onclick="window.location.href='https://belgianmobileid.github.io/slate/qes.html'">
               <div class="link" style="width:80%; margin: 5px;color:black;padding: 20px;text-align:center;border-radius: 20px;">
                 Signing Service documentation<br/>
                 <img style="width: 50px; height: 50px; margin-top:2em;" src="https://belgianmobileid.github.io/slate/images/sign_documents.png" alt="sign-logo" />
