publish: Review section 4.2
generated from commit 50746386fe75cd4a99f8a287e09eb27820c63604

--- a/jose.html
+++ b/jose.html
@@ -342,22 +342,35 @@ MRjdkly7_-oTPTS3AXP41iQIGKa80A0ZmTuV5MEaHoxnW2e5CZ5NlKtainoFmKZopdHM1O2U4mwzJdQx
 
 <p>An example illustrating the signing process is available at <a href="https://tools.ietf.org/html/rfc7520#section-4.1" target="blank">https://tools.ietf.org/html/rfc7520#section-4.1</a>.</p>
 <h2 id='4-2-encryption'>4.2. Encryption</h2>
+<p>Now that our content is signed, we will encapsulate this JWS object into a JWE object so that it becomes encrypted as well.</p>
+
 <p>An encrypted content can be serialized in two ways: the JWE compact serialization and the JWE JSON serialization. Because the OpenID Connect specification mandates to use JWE compact serialization whenever necessary, we will not explain the JWE JSON serialization signing process in this document.</p>
 
-<p>With the JWE compact serialization, a JWE object is built with five key components, each separated by a period (.): JWE Header, JWE Encrypted Key, JWE Initialization Vector, JWE Additional Authentication Data (AAD), JWE Ciphertext and JWE Authentication Tag. The following steps will show you how to generate a JWE Compact Serialization object:</p>
+<p>With the JWE compact serialization, a JWE is the concatenation of 5 elements:</p>
 
 <ol>
-  <li>Create the JWS object, as described in the section above.</li>
-  <li>Build a JSON object including all the header elements. The structure of the JWE Header is the same, as we discussed under JWS other than couple of exceptions. The JWE specification introduces two new elements (<i>"enc"</i> and <i>"cty"</i>), which are included in the JWE Header of the JWE object, in addition to what’s defined by the JSON Web Signature (JWS) specification.<br>An example can be found below.</br></li>
+<li>The <strong>JWE Header</strong> contains information about the encryption algorithms used.</li>
+<li>The encrypted <strong>Content Encryption Key (CEK)</strong> contains the key needed to decrypt the payload.</li>
+<li>The <strong>Initialization Vector</strong> is used to introduce randomness in the encryption process.</li>
+<li>The <strong>Cipher text</strong> is the encrypted payload itself. In this case, the payload is our JWS object.</li>
+<li>The <strong>Authentication Tag</strong> is used for integrity checks.</li>
 </ol>
 
-<p><code style=display:block;white-space:pre-wrap>{
-    &quot;alg&quot;: &quot;RSA-OAEP&quot;,
-    &quot;enc&quot;: &quot;A128CBC-HS256&quot;,
-    &quot;cty&quot;: &quot;JWT&quot;,
-    &quot;kid&quot;: &quot;samwise.gamgee@hobbiton.example&quot;
-}</code></p>
+<p>Here are the steps to generate those elements:</p>
 
+<ol>
+<li>Create the JWS object, as described in the section above.</li></li>
+<li>Create the JWE Header: it is a JSON object containing 4 parameters.</li>
+</ol>
+<pre class="highlight json tab-json"><code><span class="err">##</span><span class="w"> </span><span class="err">JWE</span><span class="w"> </span><span class="err">Header</span><span class="w"> </span><span class="err">Example</span><span class="w">
+
+</span><span class="p">{</span><span class="w">
+    </span><span class="s2">"alg"</span><span class="p">:</span><span class="w"> </span><span class="s2">"RSA-OAEP"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"enc"</span><span class="p">:</span><span class="w"> </span><span class="s2">"A128CBC-HS256"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"cty"</span><span class="p">:</span><span class="w"> </span><span class="s2">"JWT"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"kid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"samwise.gamgee@hobbiton.example"</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre>
 <table><thead>
 <tr>
 <th style="text-align: left">Parameter</th>
@@ -368,52 +381,60 @@ MRjdkly7_-oTPTS3AXP41iQIGKa80A0ZmTuV5MEaHoxnW2e5CZ5NlKtainoFmKZopdHM1O2U4mwzJdQx
 <tr>
 <td style="text-align: left"><strong>alg</strong></td>
 <td style="text-align: left">Required</td>
-<td style="text-align: left">This parameter has the same meaning, syntax, and processing rules as the <i>&quot;alg&quot;</i> defined in the JWS section, except that it defines the cryptographic algorithm used to encrypt the Content Encryption Key (CEK). This MUST be set to <i>&quot;RSA-OAEP&quot;</i>.</td>
+<td style="text-align: left">Defines the algorithm used to encrypt the Content Encryption Key (CEK). This MUST be set to <em>&quot;RSA-OAEP&quot;</em>.</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>enc</strong></td>
 <td style="text-align: left">Required</td>
-<td style="text-align: left">It identifies the content encryption algorithm used to perform authenticated encryption on the payload to produce the Ciphertext and the Authentication Tag. The <i>&quot;enc&quot;</i> value MUST be set to <i>&quot;A128CBC-HS256&quot;</i>.</td>
+<td style="text-align: left">Defines the algorithm used to perform authenticated encryption on the payload to produce the Ciphertext and the Authentication Tag. This MUST be set to <em>&quot;A128CBC-HS256&quot;</em>.</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>cty</strong></td>
 <td style="text-align: left">Required</td>
-<td style="text-align: left">As the JWT MUST be signed then encrypted, this Header Parameter MUST be present; in this case, the value MUST be &quot;JWT&quot;, to indicate that a Nested JWT is carried in this JWT.</td>
+<td style="text-align: left">Defines the “content type” of the payload. In this case, the value MUST be <em>&quot;JWT&quot;</em>, to indicate that a nested JWT (= our JWS) is carried inside this JWT.</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>kid</strong></td>
 <td style="text-align: left">Optionnal</td>
-<td style="text-align: left">This parameter has the same meaning, syntax, and processing rules as the <i>&quot;kid&quot;</i> parameter defined in the JWS section, except that the key hint references the public key to which the JWE was encrypted; this can be used to determine the private key needed to decrypt the JWE.</td>
+<td style="text-align: left">This parameter has the same meaning, syntax, and processing rules as the &quot;kid&quot; parameter defined in the JWS section, except that the key hint references the public key with which the JWE was encrypted; this can be used to determine the private key needed to decrypt the JWE.</td>
 </tr>
 </tbody></table>
 
 <ol>  
-  <li value="3">The JWE Header will then be encoded using using UTF-8 and base64url to produce the string below.</li>
+  <li value="3">Base64url encode the (UTF-8 encoded) JWE Header, to obtain a string like:</li>
 </ol>
 
 <p><code style=display:block;white-space:pre-wrap>eyJhbGciOiJSU0ExXzUiLCJraWQiOiJmcm9kby5iYWdnaW5zQGhvYmJpdG9uLmV4YW1wbGUiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0</code></p>
 
 <ol>
-  <li value="4">Generate a random CEK. This key will be used later to encrypt the payload.</li>
-  <li>Compute the CEK with the algorithm defined in the <i>"alg"</i> parameter, to produce the JWE Encrypted Key. To perform the encryption operation you will need the public key of itsme®, which can be retrieved from the <a href="https://belgianmobileid.github.io/slate/login.html#3-1-checking-itsme-openid-provider-configuration" target="blank">itsme® Discovery document</a>, using the <i>"jwks_uri"</i> key.</li>
-  <li>The JWE Encrypted Key will then be encoded using base64url to produce the string below.</li>
+  <li value="4">Generate a random 32 bits string to be used as CEK</li>
+  <li>Encrypt the CEK using RSA-OAEP algorithm (<a href="https://tools.ietf.org/html/rfc7518#section-4.3">RFC7518</a>).
+      The key to be used for this encryption is itsme® public key. This key is published in itsme® JWKset with parameter "use" set on "enc". Our JWKset can be found at the jwks_uri URL given in <a href="https://belgianmobileid.github.io/slate/login.html#3-1-check-itsme-openid-provider-configuration">itsme® Discovery document</a></li>
+  <li>Base64url encode the (UTF-8 encoded) encrypted CEK, to obtain a string like:</li>
 </ol>
 
-<p><code style=display:block;white-space:pre-wrap>laLxI0j-nLH-<em>BgLOXMozKxmy9gffy2gTdvqzfTihJBuuzxg0V7yk1WClnQePFvG2K-pvSlWc9BRIazDrn50RcRai</em>_3TDON395H3c62tIouJJ4XaRvYHFjZTZ2GXfz8YAImcc91Tfk0WXC2F5Xbb71ClQ1DDH151tlpH77f2ff7xiSxh9oSewYrcGTSLUeeCt36r1Kt3OSj7EyBQXoZlN7IxbyhMAfgIe7Mv1rOTOI5I8NQqeXXW8VlzNmoxaGMny3YnGir5Wf6Qt2nBq4qDaPdnaAuuGUGEecelIO1wx1BpyIfgvfjOhMBs9M8XL223Fg47xlGsMXdfuY-4jaqVw</code></p>
+<p><code style=display:block;white-space:pre-wrap>laLxI0j-nLH-<em>BgLOXMozKxmy9gffy2gTdvqzfTihJBuuzxg0V7yk1WClnQePFvG2K-pvSlWc9BRIazDrn50RcRai</em>_3TDON395H3c62tIouJJ4XaRvYHFjZTZ2GXfz8YAImcc91Tfk0WXC2F5Xbb71ClQ1DDH151tlpH77f2ff7xiSxh9oSewYrcGTSLUeeCt36r1Kt3OSj7EyBQXoZlN7IxbyhMAfgIe7Mv1rOTOI5I8NQqeXXW8VlzNmoxaGMny3YnGir5Wf6Qt2nBq4qDaPdnaAuuGUGEecelIO1wx1BpyIfgvfjOhMBs9M8XL223Fg47xlGsMXdfuY-4jaqVw
+</code></p>
 
 <ol>
-  <li value="7">Generate a random JWE Initialization Vector. Its value will be used later to encrypt the payload.</li>
-  <li>The JWE Initialization Vector will then be encoded using base64url to produce the string below.</li>
+  <li value="7">Generate a random 128 bits string to be used as Initialization Vector.</li>
+  <li>Base64url encode the Initialization Vector to obtain a string like:</li>
 </ol>
 
 <p><code style=display:block;white-space:pre-wrap>bbd5sTkYwhAIqfHsx8DayA</code></p>
 
 <ol>
-  <li value="9">Compute the ASCII value of the encoded JWE Header to get the Additional Authenticated Data (AAD). Its value will be used later to encrypt the payload.</li>
-  <li>Encrypt the payload with the encryption algorithm defined by the <i>"enc"</i> parameter. The algorithm takes as input four strings: the CEK, the AAD and the JWE Initialization Vector which were computed in the previous steps, plus the payload. The JWE Ciphertext value and Authentication Tag value are provided as outputs.
+  <li value="9">Compute the ASCII values of the characters of the encoded JWE Header to get the Additional Authenticated Data (AAD). In our example, that would give:</li>
+</ol>
+
+<p><code style=display:block;white-space:pre-wrap>101 121 74 104 98 71 99 105 79 105 74 83 85 48 69 120 88 122 85 105 76 67 74 114 97 87 81 105 79 105 74 109 99 109 57 107 98 121 53 105 89 87 100 110 97 87 53 122 81 71 104 118 89 109 74 112 100 71 57 117 76 109 86 52 89 87 49 119 98 71 85 105 76 67 74 108 98 109 77 105 79 105 74 66 77 84 73 52 81 48 74 68 76 85 104 84 77 106 85 50 73 110 48
+</code></p>
+
+<ol>
+  <li value="10">Encrypt the JWS using A128CBC-HS256 algorithm (<a href="https://tools.ietf.org/html/rfc7518#section-5.2.3">RFC7518</a>). The algorithm takes as input four strings: the CEK, the AAD, the JWE Initialization Vector and the payload (= the JWS) which were computed in the previous steps. The algorithm returns two string outputs: the JWE Ciphertext and the Authentication Tag.
   <li>Base64url-encode the JWE Ciphertext.</li>
   <li>Base64url-encode the JWE Authentication Tag.</li>
-  <li>Assemble the final representation by concatenating the five strings, and separate them with period ('.') characters. An example of a JWE object is given below.</li>
+  <li>Assemble the final representation by concatenating the five base64url encoded strings, and separate them with period ('.') characters. An example of a JWE object is given below.</li>
 </ol>
 
 <p><code style=display:block;white-space:pre-wrap>eyJhbGciOiJSU0ExXzUiLCJraWQiOiJmcm9kby5iYWdnaW5zQGhvYmJpdG9uLmV4YW1wbGUiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0
@@ -426,7 +447,7 @@ bbd5sTkYwhAIqfHsx8DayA
 .
 kvKuFBXHe5mQr4lqgobAUg</code></p>
 
-<p>An example illustrating the signing process is available at <a href="https://tools.ietf.org/html/rfc7520#section-5.2" target="blank">https://tools.ietf.org/html/rfc7520#section-5.2</a>.</p>
+<p>An example illustrating the signing process is available at <a href="https://tools.ietf.org/html/rfc7520#section-5.1" target="blank">https://tools.ietf.org/html/rfc7520#section-5.1</a>.</p>
 <h2 id='4-3-decrypting'>4.3. Decrypting</h2>
 <p>To validate a Nested JWT object, you will first need to decrypt the JWE object, then extract the signed JWS Payload and verify the JWS Signature. </p>
 
